Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55973

QSysInfo WinCE macros should not be removed in 5.8

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.8.0
    • 5.8.0 Alpha
    • Core: Other
    • None
    • 60e8714e58369fd786707847575ba842f08530f1 (qtbase/5.8, 16.9.2016, 5.8b)

    Description

      7fc2864dc5391096a19c2d5f80695129c24cc303 removed the entries from QSysInfo, but they weren't #ifdef'ed to WinCE, so it's possible there's code out there using them.

      Bring them back until Qt 6.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            thiago Thiago Macieira
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes