Bring back QSysInfo enumeration values for Windows CE

Partially revert 7fc2864dc5391096a19c2d5f80695129c24cc303.

Entries should be kept until Qt 6 for source compatibility.

Task-number: QTBUG-55973
Change-Id: I09346fcd9227224f878f5ee064152e85f075ae09
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>